--- a/BaseProject/composer.json
+++ b/BaseProject/composer.json
@@ -1,6 +1,7 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "^9.4"
+        "phpunit/phpunit": "^9.4",
+        "symfony/var-dumper": "^6.4"
     },
     "autoload": {
         "psr-4": {
